--- a/Angular/my-app/src/styles.css
+++ b/Angular/my-app/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+title {
+  text-align: center;
+}
+
+.container {
+  width: 80vw;
+  height: 80vh;
+  border: 1px solid rgb(65, 65, 65);
+  border-radius: 10px;
+  padding: 15px;
+}
