niekde som sa posunul no

--- a/Angular/my-app/src/app/components/body/body.component.css
+++ b/Angular/my-app/src/app/components/body/body.component.css
@@ -5,6 +5,14 @@
     margin-top: 1rem;
 }
 
+#inputDate {
+    width: 40%;
+}
+
+#inputTime {
+    width: 40%;
+}
+
 input {
 
     width: 100%;
@@ -13,8 +21,30 @@ input {
     font-size: 1.5rem;
  }
 
- button {
+ #add {
     height: 100%;
     padding: .615rem 2rem;
     font-size: 1.5rem;
+ }
+
+ #bodyOutput {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+ }
+
+ #bodyOutput table {
+    border-spacing: 3rem 0;
+ }
+
+ #bodyOutput table td button {
+    background-color: red;
+    color: white;
+    padding: 5px;
+    border: 1px solid darkred;
+    border-radius: 5px;
+ }
+
+ #bodyOutput table td button:hover,
+ #bodyOutput table td button:active {
+    background-color: darkred;
  }
