--- a/Angular/my-app/src/app/components/body/body.component.html
+++ b/Angular/my-app/src/app/components/body/body.component.html
@@ -1,46 +1,11 @@
-<form [formGroup]="newTaskForm" (ngSubmit)="addTask()" id="bodyInput">
-    <input formControlName="taskText" id="inputText" type="text" value="" placeholder="Add task here">
-    <input formControlName="taskDate" id="inputDate" type="date">
-    <input formControlName="taskTime" id="inputTime" type="time" name="">
-
-    <button id="add" onclick="addTask()" (ngSubmit)="addTask()" type="submit">{{ button }}</button>
-</form>
-
 <div id="bodyOutput">
-
-    <table>
-        <td>
-            Appointment
-        </td>
-        <td>
-            11/12/2022
-        </td>
-        <td>
-            08:00 AM
-        </td>
-        <td>
-            <button type="submit">X</button>
-        </td>
-    </table>
-
-    <div *ngFor="let value of taskList">
-        <p>{{value.name}}</p>
+    <div *ngFor="let task of tasks; let i = index;" class="task {{ (task.completed ? 'done' : '') }}">
+        <div class="id">{{ i }}</div>
+        <div class="content" (click)="toggleDone(i)">{{ task.content }}</div>
+        <div class="date">{{ DateSelected }}</div>
+        <div class="time">{{ TimeSelected }}</div>
+        <button class="delete" (click)="deleteTask(i)">X</button>
     </div>
-    <!-- <table>
-        <td *ngfor="let task of tasks">
-            {{ task }}
-        </td>
-        <td *ngfor="let date of dates">
-            {{ date }}
-        </td>
-        <td *ngfor="let time of times">
-            {{ time }}
-        </td>
-        <td>
-            <button type="submit">X</button>
-        </td>
-    </table> -->
-
 </div>
 
 
