--- a/Angular/my-app/src/styles.css
+++ b/Angular/my-app/src/styles.css
@@ -14,11 +14,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: lightgray;
 }
 
-title {
-  text-align: center;
-}
 
 .container {
   width: 80vw;
@@ -26,4 +24,5 @@ title {
   border: 1px solid rgb(65, 65, 65);
   border-radius: 10px;
   padding: 15px;
+  background-color: white;
 }
