--- a/Angular/my-app/src/app/app.component.html
+++ b/Angular/my-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <app-header></app-header>
-  <app-input></app-input>
+  <!-- <app-input></app-input> -->
   <app-body></app-body>
 </div>
