--- a/Angular/my-app/src/app/components/input/input.component.html
+++ b/Angular/my-app/src/app/components/input/input.component.html
@@ -1,6 +1,6 @@
-<form id="bodyInput">
+<form id="bodyInput" (submit)="addTask()">
     <input id="inputText" type="text" name="inputTask" placeholder="Add task here" [(ngModel)]="inputTask"/>
     <input id="inputDate" type="date" name="inputDate" [(ngModel)]="DateSelected"/>
     <input id="inputTime" type="time" name="inputTime" [(ngModel)]="TimeSelected"/>
-    <input id="add" type="submit" value="Add" (click)="addTask()"/>
+    <input id="add" type="submit" value="Add"/>
 </form>
