--- a/Angular/my-app/src/app/components/input/input.component.html
+++ b/Angular/my-app/src/app/components/input/input.component.html
@@ -1,6 +1,6 @@
 <form id="bodyInput" (submit)="addTask()">
-    <input id="inputText" type="text" name="inputTask" placeholder="Add task here" [(ngModel)]="inputTask"/>
-    <input id="inputDate" type="date" name="inputDate" [(ngModel)]="DateSelected"/>
-    <input id="inputTime" type="time" name="inputTime" [(ngModel)]="TimeSelected"/>
+    <input id="inputText" type="text" name="inputTask" [(ngModel)]="inputTask" placeholder="Add task here"/>
+    <input id="inputDate" type="date" name="inputDate" [(ngModel)]="inputDate"/>
+    <input id="inputTime" type="time" name="inputTime" [(ngModel)]="inputTime"/>
     <input id="add" type="submit" value="Add"/>
 </form>
