--- a/Angular/my-app/src/app/components/input/input.component.html
+++ b/Angular/my-app/src/app/components/input/input.component.html
@@ -1,6 +1,25 @@
 <form id="bodyInput" (submit)="addNewTask()">
-    <input id="inputText" type="text" name="inputTask" [(ngModel)]="inputTask" placeholder="Add task here"/>
-    <input id="inputDate" type="date" name="inputDate" [(ngModel)]="inputDate"/>
-    <input id="inputTime" type="time" name="inputTime" [(ngModel)]="inputTime"/>
-    <input id="add" type="submit" value="Add"/>
+    <input
+      id="inputText"
+      type="text"
+      name="inputTask"
+      [(ngModel)]="inputTask"
+      placeholder="Add task here"/>
+    <input
+      id="inputDate"
+      type="date"
+      name="inputDate"
+      [(ngModel)]="inputDate"
+      />
+    <input
+      id="inputTime"
+      type="time"
+      name="inputTime"
+      [(ngModel)]="inputTime"
+      />
+    <input
+      id="add"
+      type="submit"
+      value="Add"
+      />
 </form>
